# shop-engine

./: .env.example  Cargo.toml  README.md  diesel.toml  docker-compose.yml
src/: main.rs  schema.rs
src/controllers/: admin_order_controller.rs  admin_product_controller.rs  admin_user_controller.rs  auth_controller.rs  mod.rs  order_controller.rs  product_controller.rs  user_controller.rs
src/database/: conn.rs  db.rs  mod.rs  models.rs  schema.rs
src/dto/: cart.rs  category.rs  mod.rs  order.rs  order_item.rs  product.rs
src/middlewares/: mod.rs
src/models/: order.rs  user.rs
src/routes/: admin_routes.rs  auth_routes.rs  mod.rs  order_routes.rs  product_routes.rs  user_routes.rs
src/utils/: check_admin.rs  hash.rs  jwt.rs  mod.rs
