[package]
name = "shop_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
uuid = { version = "0.8.2", features = ["v4"] }
bcrypt = "0.10.1"
rand = "0.8.0"
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
serde_json = "1.0"
jsonwebtoken = "7"
chrono = "0.4.19"